<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_notification"
            android:title="@string/notification"
            android:icon="@drawable/ic_notifications_none_black_24dp"
            app:showAsAction="ifRoom"
            />
    <item
            android:id="@+id/action_search"
            android:title="@string/search"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_search_black_24dp"/>
    <item
            android:id="@+id/action_messaging"
            android:title="@string/message"
            app:showAsAction="ifRoom"
            android:icon="@drawable/ic_selectable_message"
            />

    <item android:id="@+id/action_settings"
          android:title="@string/setting"
          android:orderInCategory="100"
          app:showAsAction="never"/>
    <item
            android:id="@+id/action_tab_setting"
            android:title="@string/nav_setting_tab"
            app:showAsAction="never"

        />

</menu>
