<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_nav"
        app:startDestination="@id/navigation_home">

    <fragment
            android:id="@+id/navigation_home"
            android:name="jp.panta.misskeyandroidclient.ui.tab.TabFragment"
            android:label="@string/menu_home" />
    <fragment
            android:id="@+id/navigation_notification"
            android:name="net.pantasystem.milktea.notification.NotificationMentionFragment"
            android:label="@string/notification" />
    <fragment
            android:id="@+id/navigation_search"
            android:name="net.pantasystem.milktea.search.SearchTopFragment"
            android:label="@string/search" />
    <fragment
            android:id="@+id/navigation_message_list"
            android:name="net.pantasystem.milktea.messaging.MessagingHistoryFragment"
            android:label="@string/message" />


</navigation>