<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >
    <LinearLayout


            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

        <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:background="?attr/colorSurface"
                android:padding="12dp"
                android:elevation="4dp"
                android:text="@string/tab_selected" />

        <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/selected_tab_list"
                tools:layout_weight="0"
                tools:layout_height="50dp"
                />

        <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_marginTop="10dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:background="?attr/colorSurface"
                android:padding="12dp"
                android:elevation="4dp"
                android:text="@string/tab_selectable" />

        <Button
                android:id="@+id/addGlobalTimeline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/global_timeline"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_marginBottom="8dp"/>

        <Button
                android:id="@+id/addHybridTimeline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hybrid_timeline"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_marginBottom="8dp"/>
        <Button
                android:id="@+id/addLocalTimeline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/local_timeline"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_marginBottom="8dp"/>
        <Button
                android:id="@+id/addHomeTimeline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_timeline"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_marginBottom="8dp"/>

        <Button
                android:id="@+id/addMention"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mention"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_marginBottom="8dp"/>
        <Button
                android:id="@+id/addNotification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notification"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_marginBottom="8dp"/>
        <Button
                android:id="@+id/addFavorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorite"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_marginBottom="8dp"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
