<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="jp.panta.misskeyandroidclient.viewmodel.antenna.AntennaEditorViewModel.Source"/>
        <import type="android.view.View" />
        <import type="jp.panta.misskeyandroidclient.view.SafeUnbox" />
        <variable
                name="antennaEditorViewModel"
                type="jp.panta.misskeyandroidclient.viewmodel.antenna.AntennaEditorViewModel" />

    </data>
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/antennaEditorLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/antennaNameInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/antennaNameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:text="@{antennaEditorViewModel.name}"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/receiving_source"
                    />
            <Spinner
                    android:id="@+id/receivingSourceSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/receiving_source_type"
                    android:layout_marginBottom="8dp"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/list"
                    android:visibility="@{ antennaEditorViewModel.source == Source.LIST ? View.VISIBLE : View.GONE}"
                    />
            <Spinner
                    android:id="@+id/userListListSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:visibility="@{ antennaEditorViewModel.source == Source.LIST ? View.VISIBLE : View.GONE}"
                    />

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/user"
                    android:visibility="@{ antennaEditorViewModel.source == Source.USERS ? View.VISIBLE : View.GONE }"
                    />
           <androidx.recyclerview.widget.RecyclerView
                   android:id="@+id/specifiedUserListView"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   tools:listitem="@layout/item_user_chip"
                   tools:itemCount="1"
                   android:visibility="@{ antennaEditorViewModel.source == Source.USERS ? View.VISIBLE : View.GONE }"

                   />
            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/add_user"
                    android:visibility="@{ antennaEditorViewModel.source == Source.USERS ? View.VISIBLE : View.GONE }"
                    android:layout_marginBottom="8dp"
                    />

            <Switch
                    android:id="@+id/includeRepliesSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/include_replies"
                    android:layout_marginBottom="8dp"
                    android:checked="@={ SafeUnbox.unbox(antennaEditorViewModel.withReplies) }"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/keywordsToReceiveEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/keywords_to_receive"
                        android:inputType="textMultiLine"
                        />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/keyword_input_method"
                    android:layout_marginBottom="8dp"/>


        </LinearLayout>
    </ScrollView>
</layout>